# Utility

./: .gitmodules  CMakeLists.txt  README.md
InternalUtility/: CMakeLists.txt
InternalUtility/include/InternalUtility/: AddressPointer.h  FunctionPointer.h  InternalUtility.h
InternalUtility/include/InternalUtility/Memory/: AddressPointer.h  CodeCave.h  Detour.h  ForcedExceptionHook.cpp  ForcedExceptionHook.h  FunctionPointer.h  InstructionHandler.h  InternalUtility.h  PatternScanner.h  Typedefs.h  Variable.h
InternalUtility/include/InternalUtility/Rendering/: BorderedRectangle.h  Color.cpp  Color.h  Menu.h  Rectangle.h  Renderable.h  Renderer.h  Text.h
InternalUtility/src/: BorderedRectangle.cpp  Color.cpp  Detour.cpp  ForcedExceptionHook.cpp  InternalUtility.cpp  Menu.cpp  PatternScanner.cpp  Rectangle.cpp  Renderable.cpp  Renderer.cpp  Setting.cpp  Text.cpp
InternalUtility/src/InternalUtility/: CodeCave.cpp  Detour.cpp  ForcedExceptionHook.cpp  InstructionHandler.cpp  InternalUtility.cpp  PatternScanner.cpp
InternalUtility/src/Rendering/: Color.cpp  Menu.cpp  Rectangle.cpp  Renderer.cpp  Setting.cpp  Text.cpp
Log/: CMakeLists.txt  Logger.cpp  Logger.h
Log/include/Log/: Logger.h
Log/src/: Logger.cpp
Maths/: CMakeLists.txt  Quaternion.cpp  Quaternion.h  mat4.cpp  mat4.h  maths.h  maths_func.h  tvec2.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
Maths/src/: Quaternion.cpp  mat4.cpp  vec2.cpp  vec3.cpp  vec4.cpp
Obfuscation/: CMakeLists.txt
Win32/: CMakeLists.txt
WindowsHooks/: CMakeLists.txt
WindowsWrapper/: CMakeLists.txt
(+21 files in other folders)
